# yahooquery

./: README.md  pyproject.toml
docs/docs/: alternative.ipynb
yahooquery/: __init__.py
yahooquery/utils/: __init__.py  generate_headers.py
