[project]
name = "yahooquery"
version = "2.3.7r11"
description = "Python wrapper for an unofficial Yahoo Finance API"
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Doug Guthrie", email = "douglas.p.guthrie@gmail.com" }
]
maintainers = [
    { name = "Christopher (Ruin21)", email = "118554907+Ruin2121@users.noreply.github.com"}
]
keywords = ["python", "API", "finance", "stocks", "Yahoo Finance"]
dependencies = [
    "requests (>=2.32.0)",
    "urllib3 (>=2.2.2)",
    "pandas",
    "requests-futures",
    "tqdm",
    "lxml",
    "beautifulsoup4"
]

[project.urls]
documentation = "https://yahooquery.dpguthrie.com"

[project.optional-dependencies]
premium = ["selenium"]

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pre-commit = "*"
mkdocs-material = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"